# bibliometrics-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  run_web.py  web_api.py
.pipeline/: .session-context.md
agent_logs/: paper_fetcher_guardian.json  paper_fetcher_soul.json  test_module_guardian.json  test_module_soul.json  topic_modeler_guardian.json  topic_modeler_soul.json  tsr_ranker_guardian.json  tsr_ranker_soul.json
app/: i18n.py  main.py
config-sample/: LLM_CONFIG.md  openai_providers.sh.example
configs/: default.yaml
core/: agent_guardian.py  agent_spec.py  communication_hub.py  context.py  context_injector.py  error_monitor.py  guardian_soul.py  orchestrator.py  pipeline_runner.py  project_logger.py  state_manager.py  tuning_agent.py  workspace_manager.py
docs/: agent_enhancement_design.md  architecture_diagrams.md  guardian_context_injection.md  memory_implementation_summary.md  pubmed_fetcher.md  pubmed_fetcher_quick_ref.md
docs_archive/: AI_WORKFLOW_VISUALIZATION_SUMMARY.md  DELIVERABLES.md  ERROR_MONITORING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  METADATA_NORMALIZER_SUMMARY.md  METADATA_NORMALIZER_USAGE.md  PAPER_FETCHER_UPGRADE.md  PROJECT_LOGGING_SYSTEM.md  README.md  REALTIME_PROGRESS_UPDATE.md  REQUIREMENTS_VERIFICATION.md  UPGRADE_COMPLETION_REPORT.md  WORKSPACE_REFACTORING.md
docs_content/: QUICK_START_GUIDE.md  README.md
docs_progress/: README.md  context_memory_implementation.md
fixes/: guardian_fix_2026-04-08T22-24-35-069876.py  guardian_fix_2026-04-09T06-29-30-358990.py  (+10 more)
llm/: __init__.py  (+2 more)
(+90 files in other folders)
